
    Some change notes are brief; consult the documentation for further
    information/clarification.  It is possible that some changes to
    MHonArc are not documented here, but every effort is made to list
    all visible changes.

YYYY/MM/DD
============================================================================
2011/01/09	(2.6.17)

* Security Fixes:

    Bug ID  Summary
    ------  ------------------------------------------------------------
    32013   CVE-2010-4524: Improper escaping of certain HTML
            sequences (XSS) 
    32014   CVE-2010-1677: DoS when processing html messages with deep
            tag nesting
    32080   Specially crafted <base href> can lead to XSS exploit
    ------  ------------------------------------------------------------

* Bug Fixes:

    Bug ID  Summary
    ------  ------------------------------------------------------------
    13853   Creation of archive with attachments writes over symlinks
    14747   major (10X) memory savings possible in some situations
    15433   relative attachmentdir is relative to current working dir,
            not outdir 
    17660   Threaded index resource ordering doesn't allow well formed
            XML output
    17860   incorrect nested HTML Tags for references
    17904   FieldOrder affects AddressModifyCode
    18113   Inconsistant thread slices w/ poor man's windowing
    18908   X-Subject data get split in separate lines
    20074   extra space in subject
    20142   strip backslash in rfc822 From: field
    23198   Incorrect Setting Installation Directory
    24247   iso2022jp.pl: unneeded ESC ( B remains in message body
    25225   dir_create() fails to make temporary directories (PATCH)
    25486   Resource FieldStore causes .mhonarc.db to grow over bounds
    26577   Changed semantic for unpack breaks UTF-8
    32032   TextEncode related resource information not saved correctly
            in db file