@@ -13,6 +13,12 @@
 
 YYYY/MM/DD
 ============================================================================
+2011/01/09	(2.6.18)
+
+* Update to HTML filter to improve filtering of event-based
+  attributes.
+
+============================================================================
 2011/01/09	(2.6.17)
 
 * Security Fixes:
@@ -2812,4 +2818,4 @@ YYYY/MM/DD
 
 =======================================================================
 Earl Hood, mhonarc@mhonarc.org
-$Id: CHANGES,v 1.156 2011/01/09 08:48:53 ehood Exp $
+$Id: CHANGES,v 1.157 2011/01/09 16:12:12 ehood Exp $
